# proiect_lfa_cs112

./: .gitignore  4_config_dfa.txt  4_config_nfa.txt  5_config_dfa.txt  5_config_dfa_minimized.txt  6_1_cfg.txt  6_2_cfg.txt  6_3_cfg.txt  6_config_cfg.txt  6_config_cfg_simplified.txt  CFG.cpp  CFG.h  CMakeLists.txt  DFA.cpp  DFA.h  NFA.cpp  NFA.h  README.md  config_dfa.txt  config_nfa.txt  ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp  ex6.cpp  main.cpp
sipser_1_5/: config_dfa__a.txt  config_dfa__b.txt  config_dfa__c.txt  config_dfa__d.txt  config_dfa__e.txt  config_dfa__f.txt  config_dfa__g.txt  config_dfa__h.txt  config_dfa_a.txt  config_dfa_b.txt  config_dfa_c.txt  config_dfa_d.txt  config_dfa_e.txt  config_dfa_f.txt  config_dfa_g.txt  config_dfa_h.txt
sipser_1_6/: config_dfa_a.txt  config_dfa_b.txt  config_dfa_c.txt  config_dfa_d.txt  config_dfa_e.txt  config_dfa_f.txt  config_dfa_g.txt  config_dfa_h.txt  config_dfa_i.txt  config_dfa_j.txt  config_dfa_k.txt  config_dfa_l.txt  config_dfa_m.txt  config_dfa_n.txt
sipser_1_7/: config_nfa_a.txt  config_nfa_b.txt  config_nfa_c.txt  config_nfa_d.txt  config_nfa_e.txt  config_nfa_f.txt  config_nfa_g.txt  config_nfa_h.txt
